--- a/main.css
+++ b/main.css
@@ -16,18 +16,19 @@ button{
     padding: 10px;
     border: none;   
     transition: .3s;
+    background: lightblue;
 }
 button:focus{
     outline: none;
 }
 button:hover{
-    background-color: rgb(45, 135, 214);
+    background-color: rgb(147, 181, 192);
     color: antiquewhite;
     
 }
 input{
     border: none;
-    padding: 5px;
+    padding: 10px;
 }
 input:focus{
     outline: none;
